# trajectly

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACTS_VERSION_POLICY.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  ONBOARDING_10_MIN.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml  vulture_allowlist.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pre-release-smoke.yml  release.yml  scorecard.yml
docs/: agent_spec_reference.md  architecture_phase1.md  audit_phase1.md  ci_github_actions.md  cli_reference.md  contract_catalog.md  end_to_end_plan.md  examples-developer-guide.md  fresh_user_report.md  how_trt_provides_value.md  index.md  paid_services_plan.md  platform_adapters.md  platform_api_surface.md  platform_sync_protocol.md  start_here.md  testing_guide.md  trace_schema_reference.md  trajectly.md  trajectly_guide.md  trajectly_reference.md  trt_theory.md  tutorial-code-review-agent.md  tutorial-code-review-bot.md  tutorial-payments-agent.md  tutorial-procurement-approval-agent.md  tutorial-support-escalation-agent.md  tutorial-support-triage.md  what_trajectly_catches.md
docs/trt/: abstraction-reference.md  contracts-reference.md  guarantees.md  quickstart.md  troubleshooting.md  what-is-trt.md
examples/: README.md
examples/specs/: real-gemini-baseline.agent.yaml  (+25 more)
github-action/: action.yml
scripts/: benchmark_trt.py  check_blocked_paths.sh
src/: sitecustomize.py
src/trajectly/: cli.py  (+18 more)
tests/: __init__.py  sample.agent.yaml  simple.agent.yaml  tool.agent.yaml
(+199 files in other folders)
