[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectly"
version = "0.3.0rc1"
description = "Trajectory Refinement Testing (TRT) for deterministic agent CI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  {name = "Ahmed Ashmawy", email = "awashmawy@proton.me"}
]
keywords = ["agents", "testing", "regression", "llm", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12,<1",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
trajectly = "trajectly.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["sitecustomize"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
packages = ["trajectly"]
